; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_wbsd.c_wbsd_chip_config.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_wbsd.c_wbsd_chip_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wbsd_host = type { i32, i32, i32 }

@WBSD_CONF_SWRST = common dso_local global i32 0, align 4
@WBSD_CONF_DEVICE = common dso_local global i32 0, align 4
@DEVICE_SD = common dso_local global i32 0, align 4
@WBSD_CONF_PINS = common dso_local global i32 0, align 4
@WBSD_PINS_DETECT_GP11 = common dso_local global i32 0, align 4
@WBSD_CONF_PORT_HI = common dso_local global i32 0, align 4
@WBSD_CONF_PORT_LO = common dso_local global i32 0, align 4
@WBSD_CONF_IRQ = common dso_local global i32 0, align 4
@WBSD_CONF_DRQ = common dso_local global i32 0, align 4
@WBSD_CONF_ENABLE = common dso_local global i32 0, align 4
@WBSD_CONF_POWER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wbsd_host*)* @wbsd_chip_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wbsd_chip_config(%struct.wbsd_host* %0) #0 {
  %2 = alloca %struct.wbsd_host*, align 8
  store %struct.wbsd_host* %0, %struct.wbsd_host** %2, align 8
  %3 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %4 = call i32 @wbsd_unlock_config(%struct.wbsd_host* %3)
  %5 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %6 = load i32, i32* @WBSD_CONF_SWRST, align 4
  %7 = call i32 @wbsd_write_config(%struct.wbsd_host* %5, i32 %6, i32 1)
  %8 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %9 = load i32, i32* @WBSD_CONF_SWRST, align 4
  %10 = call i32 @wbsd_write_config(%struct.wbsd_host* %8, i32 %9, i32 0)
  %11 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %12 = load i32, i32* @WBSD_CONF_DEVICE, align 4
  %13 = load i32, i32* @DEVICE_SD, align 4
  %14 = call i32 @wbsd_write_config(%struct.wbsd_host* %11, i32 %12, i32 %13)
  %15 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %16 = load i32, i32* @WBSD_CONF_PINS, align 4
  %17 = load i32, i32* @WBSD_PINS_DETECT_GP11, align 4
  %18 = call i32 @wbsd_write_config(%struct.wbsd_host* %15, i32 %16, i32 %17)
  %19 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %20 = load i32, i32* @WBSD_CONF_PORT_HI, align 4
  %21 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %22 = getelementptr inbounds %struct.wbsd_host, %struct.wbsd_host* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = ashr i32 %23, 8
  %25 = call i32 @wbsd_write_config(%struct.wbsd_host* %19, i32 %20, i32 %24)
  %26 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %27 = load i32, i32* @WBSD_CONF_PORT_LO, align 4
  %28 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %29 = getelementptr inbounds %struct.wbsd_host, %struct.wbsd_host* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = and i32 %30, 255
  %32 = call i32 @wbsd_write_config(%struct.wbsd_host* %26, i32 %27, i32 %31)
  %33 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %34 = load i32, i32* @WBSD_CONF_IRQ, align 4
  %35 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %36 = getelementptr inbounds %struct.wbsd_host, %struct.wbsd_host* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @wbsd_write_config(%struct.wbsd_host* %33, i32 %34, i32 %37)
  %39 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %40 = getelementptr inbounds %struct.wbsd_host, %struct.wbsd_host* %39, i32 0, i32 2
  %41 = load i32, i32* %40, align 4
  %42 = icmp sge i32 %41, 0
  br i1 %42, label %43, label %50

43:                                               ; preds = %1
  %44 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %45 = load i32, i32* @WBSD_CONF_DRQ, align 4
  %46 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %47 = getelementptr inbounds %struct.wbsd_host, %struct.wbsd_host* %46, i32 0, i32 2
  %48 = load i32, i32* %47, align 4
  %49 = call i32 @wbsd_write_config(%struct.wbsd_host* %44, i32 %45, i32 %48)
  br label %50

50:                                               ; preds = %43, %1
  %51 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %52 = load i32, i32* @WBSD_CONF_ENABLE, align 4
  %53 = call i32 @wbsd_write_config(%struct.wbsd_host* %51, i32 %52, i32 1)
  %54 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %55 = load i32, i32* @WBSD_CONF_POWER, align 4
  %56 = call i32 @wbsd_write_config(%struct.wbsd_host* %54, i32 %55, i32 32)
  %57 = load %struct.wbsd_host*, %struct.wbsd_host** %2, align 8
  %58 = call i32 @wbsd_lock_config(%struct.wbsd_host* %57)
  ret void
}

declare dso_local i32 @wbsd_unlock_config(%struct.wbsd_host*) #1

declare dso_local i32 @wbsd_write_config(%struct.wbsd_host*, i32, i32) #1

declare dso_local i32 @wbsd_lock_config(%struct.wbsd_host*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
